openmediavault (6.1.5-1) stable; urgency=low

  * Display SSL fingerprints in the details page.
  * Issue #1459: Improve error message when obsolete cached data
    has been found.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 05 Jan 2023 12:58:10 +0100

openmediavault (6.1.4-2) stable; urgency=low

  * Update locale files.
  * Various bug fixes and improvements.
  * Add tags form field.
  * Convert `Comments` field into `Tags` on various pages across
    the whole UI. Please check and adapt your settings if necessary.
  * Issue #1447: Display a notification if updates are available.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Dec 2022 00:02:23 +0100

openmediavault (6.1.3-1) stable; urgency=low

  * Various improvements.
  * Issue #1447: Display number of available updates as badge.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 21 Dec 2022 20:46:00 +0100

openmediavault (6.1.2-1) stable; urgency=low

  * Update locale files.
  * Various improvements.
  * Validate `/etc/ssh/sshd_config` after deployment.
  * Fix faulty pending confirmation request on Dashboard settings
    page.
  * Issue #1442: Enhance network interface dashboard widget (grid).
  * Issue #1443: Fix datatable search field render issue when
    dark mode is enabled.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 07 Dec 2022 18:44:42 +0100

openmediavault (6.1.1-1) stable; urgency=low

  * Do not request a confirmation after the shared folders ACL page
    has been saved and is exited.
  * Issue #1435: Disable the animation in the login screen if the
    `prefers-reduced-motion` preference is set to `reduce`.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 04 Dec 2022 13:19:18 +0100

openmediavault (6.1.0-1) stable; urgency=low

  * Update locale files.
  * Various improvements.
  * Fixed a bug in the file system page. Allow unmounting of read-only
    file systems.
  * Fix render bug in the notification sidebar.